# Coral.Efficiencies.r14327

./: .project  GNUmakefile.in  README  configure  configure.in  coral_config.h.in  rootswap.csh  rootswap.sh  setup.csh.in  setup.sh.in
doc/public/: doc_MySQLDB.txt
makefiles/: General.mk  Include.mk.in
scripts/: magInfo.pl
src/DaqDataDecoding/: CMakeLists.txt  ChangeLog  Doxyfile.cmake  INSTALL  Makefile  Makefile.inc.in  README  configure  configure.in  data.doc  footer.html  main.doc
src/DaqDataDecoding/examples/MurphyTV/: CollectErrs.cxx  CollectErrs.h  GUI.txt  Main.cxx  Makefile  MurphyTV.cxx  MurphyTV.h  errorDumpAll.cxx  errsdescr.h  helpgui.h
src/DaqDataDecoding/examples/how-to/: Makefile  ddd.cc  fake_event.cc  feor.cc  maps.cc  plugin-TT.cc  plugin.cc  tt.py
src/DaqDataDecoding/examples/separate/: Makefile  simple.cc
src/DaqDataDecoding/src/: CatchInfo.cc  CatchInfo.h  Chip.cc  Chip.h  ChipADC.cc  ChipADC.h  ChipAPV.cc  ChipAPV.h  ChipAPVRICH.cc  ChipAPVRICH.h  ChipCol.cc  ChipCol.h  ChipF1.cc  ChipF1.h  ChipGandalf.cc  ChipGandalf.h  ChipGassiplex.cc  ChipGassiplex.h  ChipHotGeSiCA.cc  ChipHotGeSiCA.h  ChipSADC.cc  ChipSADC.h  ChipSADC_huffman.cc  ChipSADC_huffman.h  ChipSinica.cc  ChipSinica.h  DaqError.cc  DaqError.h  DaqEvent.cc  DaqEvent.h  DaqEventsManager.cc  DaqEventsManager.h  DaqMap.cc  DaqMap.h  DaqOption.cc  DaqOption.h  DateEquipment.cc  DateEquipment.h  DetID.h  Event1Run.cc  (+26 more)
src/alignment/: AddOffset.cc  Align.cc  Align.h  CheckTracks.cc  CheckTracks.h  CleanDetFile.cc  CsManyChunk.cc  CsReloadAll.cc  DeadZoneInfo.cc  DeadZoneInfo.h  Defs.h  DetFileManager.cc  DetFileManager.h  DetectorInfo.cc  DetectorInfo.h  Doxyfile  DrawTracks3D.cc  DrawTracks3D.h  DrawTracks3DFromCoral.cc  DrawTracks3DFromTree.cc  Fit.cc  Fit.h  GNUmakefile  LinkDef.h  Macro.cc  Macro.h  MagnetInfo.cc  MagnetInfo.h  Main.AddOffset.cc  Main.CheckTracks.cc  Main.CleanDetFile.cc  Main.UpdateFromAlign.cc  Main.align.cc  Main.display3D.cc  Main.eff.cc  Main.traf.cc  Obj3D.cc  Obj3D.h  Opt.cc  Opt.h  (+31 more)
src/base/: Coral.cc  Coral.h  CoralRelease.h  (+8 more)
src/calorim/Reco/: Doxyfile  INSTALL  Makefile  Makefile.inc.in  TODO  configure  configure.in
src/calorim/Reco/src/: Calibration.cc  Calorimeter.cc  Calorimeter.h  CalorimeterAlignmentInTime.cc  CalorimeterAlignmentInTime.h  CalorimeterCellsMatrix.cc  CalorimeterCellsMatrix.h  CalorimeterDB.cc  CalorimeterFitInfo.h  CalorimeterHist.h  CalorimeterOptions.cc  CalorimeterOptions.h  CalorimeterParticle.cc  CalorimeterParticle.h  CalorimeterSubSet.h  CalorimeterSummaryInspectLED.h  Cell.cc  Cell.h  CellDataRaw.cc  CellDataRaw.h  CellType.cc  CellType.h  Cluster.cc  Cluster.h  Correction1D.h  DataBase.cc  DataBase.h  DataMapping.cc  Exception.h  GUIBaseCalorimeter.cc  GUIBaseCalorimeter.h  GUIBaseCalorimeter.ui  GUICalorimeter.cc  GUICalorimeter.h  GUICalorimeterMove.cc  GUICalorimeterMove.h  GUICalorimeterMove.ui  GUICellsMatrix.cc  GUICellsMatrix.h  LinkDef.h  (+34 more)
src/calorim/Reco/src/fortran_reco/: Ecell.F  README  badcheck.F  ecal2reco.F  fastreco.F  parameters.inc  separa.F  showerfit.F
src/calorim/Reco/src/fortran_reco/commonblocks/: badlist.inc  ccuts.inc  cells.inc  chkbad.inc  clb.inc  cluster.inc  debug.inc  fcuts.inc  files.inc  flags.inc  gamma.inc  gclb.inc  geom.inc  iflags.inc  leds.inc  mincells.inc  misc.inc  pawc.inc  rawcells.inc  runpar.inc  showerprof.inc  thr_test.inc  thresholds.inc  xymap.inc  zn.inc  zonesize.inc
src/calorim/Reco/src/fortran_reco/functions/: cell.inc  cell0.inc  chisq.inc  constr.inc  d2celldx2.inc  d2celldxdy.inc  d2celldy2.inc  dcelldx.inc  dcelldy.inc  errcell2.inc  icalad.inc  isitlg.inc  xm2g.inc  xy.inc
src/calorim/Reco/test/: CalorimeterBuilder.cc  CalorimeterGAMS.cc  CalorimeterGAMS.h  GAMS-4pi.geom  GAMS-4pi.mapping  Makefile  ToyCalorimeter.cc  ToyCalorimeter.h  calibration.cc  db.cc  ftest.F  generate.c  gui.cc  main.cc  online.cc  r.cc  run.cc  t1.cc  t3.cc  testEdepCorr.cc  testRCecorr.cc  testRCpcorr.cc  testTiSdepCorr.cc  testreco.cc
src/condb/handler/: CDB.h  CondDbHandler.cc  CondDbHandler.h  CondDbHandlerError.h  GNUmakefile  GNUmakefile.cdb  Interval.h  Makefile.in  configure  configure.in  mkFolder.cc  mkFolderSet.cc  readCDB.cc  run.config  schema.dmp.20010529  schema.dmp.20010911  setup.csh.in  setup.sh.in  store.2000.example.csh  storeCDB.cc
src/coool/: AUTHORS  Makefile  Makefile.inc.in  README  cern_build  configure  configure.in  copyright  pccogwXX_build  run_coool_on_pccorcXX
src/coool/expat/: Makefile
src/coool/expat/sample/: daq.cc  daq.xml  x.sh
src/coool/expat/xmlwf/: unixfilemap.c
src/coool/lstrack/: Makefile  Makefile.inc.in  configure  configure.in
src/coool/lstrack/src/: Doublet.cc  Doublet.h  FitCTime.cc  FitCTime.h  Fits.cc  Fits.h  LinkDef.h  LinkDefM.h  MManGeometry.cc  MManGeometry.h  MMan_2triplets.cc  MMan_2triplets.h  MMan_pb.cc  MMan_pb.h  Makefile  Station.cc  Station.h  Structures.cc  Structures.h  TestGeom.cc  TrackMaker.cc  TrackMaker.h  Tracker.cc  Tracker.h  config.h.in
src/coool/src/: BitButton.cc  BitButton.h  Containers.h  GeomPlane.cc  GeomPlane.h  GeomPlaneGEM.cc  GeomPlaneGEM.h  GeomPlaneMumega.cc  GeomPlaneMumega.h  GeomPlaneMuonWallA.cc  GeomPlaneMuonWallA.h  GeomPlaneMwpc.cc  GeomPlaneMwpc.h  GeomPlanePGEM.cc  GeomPlanePGEM.h  GeomPlanePMumega.cc  GeomPlanePMumega.h  GeomPlaneScifiG.cc  GeomPlaneScifiG.h  GeomPlaneScifiJ.cc  GeomPlaneScifiJ.h  GeomPlaneSili.cc  GeomPlaneSili.h  Geometry.cc  Geometry.h  Group.cc  Group.h  GroupBeamKiller.cc  GroupBeamKiller.h  GroupCEDAR.cc  GroupCEDAR.h  GroupCamera.cc  GroupCamera.h  GroupDAQ.cc  GroupDAQ.h  GroupECAL1.cc  GroupECAL1.h  GroupGEM.cc  GroupGEM.h  GroupMumega.cc  (+183 more)
src/mondb/: Makefile  Makefile.inc.in  configure  configure.in
src/mondb/src/: Add2DB.cc  CatDB.cc  GenerateDB.cc  LoadDB.cc  LsDB.cc  Makefile  Makefile.in  Parameters.h  SyncDB.cc  Test.cc  TestSpeed.cc  TestSpeed.csh  Utilities.cc  config.h  config.h.in  monDB.cc  monDB.h
tools/: README  cvsstat.pl  findobjects  gcc-version.sh  makeclear  makedelivery  makedoc  makedoxygen  makestatcvs  maketar  snapshot
(+1373 files in other folders)
